--- a/_includes/category/title.html
+++ b/_includes/category/title.html
@@ -4,7 +4,4 @@
   {% endif %}
 {% endfor %}
 
-<h1 class="page-title">
-    <div class="page-title__text">{{ category_name }}</div>
-    <div class="page-title__subtitle">Articles on the category <strong>‘{{ category_name }}’</strong></div>
-</h1>
+<div class="category-subtitle">Artigos da categoria <strong>‘{{ category_name }}’</strong></div>
