--- a/_includes/page/explore.html
+++ b/_includes/page/explore.html
@@ -3,7 +3,10 @@
     <div class="explore__label">Explore as diferentes categorias</div>
     <ul class="categories">
         {% for category in site.data.categories %}
-            <li class="categories__item"><a href="{{ '/categories/' | append: category.slug | prepend: site.baseurl }}">{{ category.name }}</a></li>
+            <li class="categories__item">
+            <a href="{{ '/categories/' | append: category.slug | prepend: site.baseurl }}">{{ category.name }}</a>
+            <img class="category-icon" src="/assets/images/icons/{{category.slug}}.png">
+            </li>
         {% endfor %}
 		<li class="categories__item"><a href="{{ '/' | prepend: site.baseurl }}">Todas</a></li>
     </ul>
