traduzindo uma frase

--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -19,8 +19,8 @@ layout: default
 
     {% if empty_category %}
         <li class="empty-post-list">
-            It seems that there are no articles on that category,
-            please go back <a href="/">home</a> to see the full list of articles.
+            Parece que não há artigos nessa categoria,
+            por favor volte  para a <a href="/">home</a> para ver a lista completa de artigos.
         </li>
     {% endif %}
 </ul>
